# local_token_expansion

./: .gitignore  README.md  prompt_summary.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: api_baseline_models.yaml  api_baseline_template.yaml  default.yaml  stress_all_models.yaml  unified_anthropic_api.yaml  unified_mock.yaml  unified_openai_api.yaml  unified_weekend.yaml
docs/: api_backend_calibration.md  api_extension_results.md  eval_positioning.md  inspect_integration.md  methodology.md  paper_accountability_scaffold.md  paper_discussion_limitations_draft.md  paper_methods_draft.md  probe_intervention_table.md  product_direction.md  whitepaper_draft.md
docs/figures/: build_notebook.py  generate_scaffold_path.py  paper_figures.ipynb
docs/internal/: README.md  future_agent_manifest.md  handover_unified_experiment.md  paper_intro_results_draft.md  paper_results_draft.md  repo_reorganization_plan.md  unified_experiment_spec.md
examples/: mock_config.yaml  stress_mock_config.yaml  unified_mock_config.yaml
examples/results/: run_20260223.jsonl  stress_20260223_stress.jsonl
experiments/: analysis.ipynb  download_models.py  run_all_models.py  run_propensity.py
experiments/configs/: local_llm_propensity.json  mistral_propensity.json  temp_Mistral-7B-Instruct-v0.3_config.json
experiments/inspect/: README.md  scorers.py  structured_extraction_eval.py
experiments/outputs/: local_llm__Meta-Llama-3.1-8B-Instruct-3bit.jsonl  local_llm__Mistral-7B-Instruct-v0.3.jsonl  (+6 more)
lte/: __main__.py  cli.py  config.py  contracts.py  io.py  metrics.py  reporting.py  schema.py  stress.py  suites.py  token_count.py  unified.py
old scripts/: wmca_finetune_v1.ipynb  wmca_summaries_v1_0.ipynb
research/: README.md
scripts/: generate_figures.py  prepare_drift_weekend_config.py  run_drift_weekend.py  run_unified_weekend.py
suites/: core_conciseness.yaml  long_context_stability.yaml  persistent_failure_probe.yaml  structured_extraction.yaml
tests/: test_api_backends.py  test_cli_smoke.py  test_contracts.py  test_drift_failure_causes.py  test_drift_weekend_scripts.py  test_metrics.py  test_stress.py  test_stress_prompt.py  test_suites.py  test_token_count.py  test_unified.py  test_unified_weekend_script.py
(+60 files in other folders)
