[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "local-threshold-evaluation"
version = "0.1.0"
description = "Deployer-side LLM evaluation harness for operational degradation and intervention signals"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local Threshold Evaluation contributors" }]
dependencies = [
  "PyYAML>=6.0",
  # Only installed on Apple Silicon macOS; CI remains MLX-free.
  "mlx-lm>=0.20.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.8",
]

[project.scripts]
lte = "lte.cli:main"

[project.urls]
Repository = "https://github.com/AlejandroBeltranA/local_token_expansion"
Documentation = "https://github.com/AlejandroBeltranA/local_token_expansion#readme"

[tool.setuptools]
packages = ["lte", "lte.backends"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
